# StarArm_MoveIt2

./: .gitignore  README.md
llm_bridge/: REAMD.md  package.xml  setup.cfg  setup.py
llm_bridge/launch/: llm_bridge.launch.py
llm_bridge/llm_bridge/: llm_bridge_node.py
llm_bridge/scripts/: start_llm.sh
micro-ROS-Agent/micro_ros_agent/cmake/: SuperBuild.cmake
realsense_bringup/: README.md  package.xml  requirements-perception.txt  requirements.txt  setup.cfg  setup.py
realsense_bringup/config/: d435i_color.yaml
realsense_bringup/launch/: pepper_detector.launch.py  pepper_detector_gpu.launch.py  pepper_rou_detector.launch.py
realsense_bringup/realsense_bringup/: circle_tracker.py  pepper_bing_confirmer.py  pepper_confirmed_transformer.py  pepper_detector.py  pepper_detector_gpu.py  pepper_grasp_selector.py  pepper_point_transformer.py
realsense_bringup/rviz/: pepper_detector.rviz
star_arm/: CMakeLists.txt  package.xml
star_arm/config/: joint_names_star_arm.yaml
star_arm/launch/: display.launch.py
star_arm/meshes/: base_link.STL  camera_link.STL  end_link1.STL  end_link2.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL
star_arm/rviz/: arm.rviz
star_arm/urdf/: star_arm.csv  star_arm.urdf  star_arm.urdf.xacro
star_arm_grab/: CMakeLists.txt  package.xml
star_arm_grab/launch/: grab.launch.py
star_arm_grab/src/: grab_node.cpp
star_arm_hardware/: CMakeLists.txt  README.md  package.xml  star_arm_hardware.xml
star_arm_hardware/include/star_arm_hardware/: star_arm_hardware_interface.hpp
star_arm_hardware/launch/: moveit_real_hardware.launch.py  real_hardware.launch.py
star_arm_hardware/src/: star_arm_hardware_interface.cpp
star_arm_movit_config/: .setup_assistant  CMakeLists.txt  package.xml
star_arm_movit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  moveit_point.rviz  my_robot.ros2_control.xacro  my_robot.srdf  my_robot.urdf.xacro  ompl_planning.yaml  ros2_controllers.yaml  sensors_3d.yaml
star_arm_movit_config/launch/: real.launch.py  setup_assistant.launch.py
trajectory_bridge/: README.md  package.xml  setup.cfg  setup.py
trajectory_bridge/trajectory_bridge/: joint_state_stamp_relay.py  trajectory_bridge_node.py
